--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                         อายุ:<b>18 ปี</b>.</br>
                                        
                                         <div class="social-style-one mt-55 rmt-35 animate-element delay10 fadeInUp">
-                                            <a href="#"><i class="https://www.facebook.com/new.akkaranan"><i class="fab fa-facebook-f"></i></a>
+                                            <a href="https://www.facebook.com/new.akkaranan"><i class="fab fa-facebook-f"></i></a>
                                             <a href="#"><i class="fab fa-twitter"></i></a>
                                             <a href="#"><i class="fab fa-instagram"></i></a>
                                         </div>
