--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <!--====== Required meta tags ======-->
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="description" content="portfolio,พอร์ตโฟลิโอ" />
+    <meta name="description" content="portfolio,ประวัติส่วนตัว,พอร์ตงาน,พอร์ตโฟลิโอ" />
     <meta name="author" content="อัครนันท์ ชัยพงษ์,Akkaranan Chaiyapong">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!--====== Title ======-->
-    <title>It's Me - HTML Template || Home</title>
+    <title>นี่คือ...ฉัน - พอร์ตโฟลิโอ || หน้าแรก</title>
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
     <!--====== Google Fonts ======-->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@300;400;500&display=swap" rel="stylesheet">
     <!--====== FontAwesome ======-->
     <link href="assets/css/fontawesome.5.9.0.min.css" rel="stylesheet">
     <!--====== Bootstrap ======-->
@@ -58,9 +60,9 @@
                 <div class="hide-menu a-nav-toggle"></div>
                 <div class="menu">
                     <div class="menu-lang">
-                        <a href="#" class="menu-lang-item active">Eng.</a>
-                        <a href="#" class="menu-lang-item">Fra.</a>
-                        <a href="#" class="menu-lang-item">Ara.</a>
+                        <a href="index.html" class="menu-lang-item active">TH.</TH></a>
+                        <a href="index-en.html" class="menu-lang-item">ENG.</a>
+                    
                     </div>
                     <div class="menu-main mt-100" id="accordion">
                         <ul id="menuMain">
@@ -88,7 +90,7 @@
                                     <li>โทรศัพท์:(66+)092-658-4692</li>
                                     <li>อีเมล:akkaranan1145@gmail.com</li>
                                 </ul>
-                                <a href="#Contact" class="download-cv">Download CV <i class="fas fa-download"></i></a>
+                                    </li><a href="index.html">ไทย</a> | <a href="index.html">อังกฤษ</a></li>
                             </div>
                             <div class="row align-items-center">
                                 <div class="col-lg-5">
@@ -127,7 +129,7 @@
                             <div class="row align-items-center">
                                 <div class="col-lg-7">
                                     <div class="service-image animate-element delay4 fadeInUp">
-                                        <span class="sub-title mb-75">Services</span>
+                                        <span class="sub-title mb-75">ไลฟ์สไตล์</span>
                                         <div class="service-inner-images">
                                             <img src="assets/images/services/services-dark.png" alt="Service">
                                             <img class="shape-one animate-element delay6 bounceIn" src="assets/images/services/shape-one-dark.png" alt="shape">
@@ -138,33 +140,33 @@
                                 <div class="col-lg-5">
                                     <div class="service-content pt-100 rpt-55 animate-element delay5 fadeInUp">
                                         <div class="section-title mb-25">
-                                            <h2 class="slide-title animate-element delay5 fadeInUp">What <span class="text-typed a-typed a-typed-services" data-text="Services"></span> i provde to my clients in here.</h2>
+                                            <h2 class="slide-title animate-element delay5 fadeInUp">กิจกรรมของ<span class="text-typed a-typed a-typed-services" data-text="นิว"></span>กิจกรรมยามว่าง</h2>
                                         </div>
-                                        <p class="animate-element delay6 fadeInUp">I always want to be able to meet the goals of my clients, I value my services as a designer through my work. You may like my <b>services.</b></p>
+                                        <p class="animate-element delay6 fadeInUp">ฉันใฃ้เวลาว่างในการทำกิจกรรมต่างๆ<b>ดูหนัง ฟังเพลง เล่นเกม วาดรูป</b></p>
                                         <div class="our-services animate-element delay8 fadeInUp">
                                             <div class="service-item">
                                                 <div class="icon">
                                                     <img src="assets/images/services/service-icon1.png" alt="Icon">
                                                 </div>
-                                                <h4>App Design</h4>
+                                                <h4>ดูหนัง</h4>
                                             </div>
                                             <div class="service-item">
                                                 <div class="icon">
                                                     <img src="assets/images/services/service-icon2.png" alt="Icon">
                                                 </div>
-                                                <h4>Web Design</h4>
+                                                <h4>ฟังเพลง</h4>
                                             </div>
                                             <div class="service-item">
                                                 <div class="icon">
                                                     <img src="assets/images/services/service-icon3.png" alt="Icon">
                                                 </div>
-                                                <h4>Illustraiton</h4>
+                                                <h4>เล่นเกม</h4>
                                             </div>
                                             <div class="service-item">
                                                 <div class="icon">
                                                     <img src="assets/images/services/service-icon4.png" alt="Icon">
                                                 </div>
-                                                <h4>Branding</h4>
+                                                <h4>วาดรูป</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -180,14 +182,14 @@
                                 <div class="col-lg-5">
                                     <div class="skill-content animate-element delay5 fadeInUp">
                                         <div class="section-title mb-25">
-                                            <span class="sub-title mb-45">Skills</span>
-                                            <h2 class="slide-title animate-element delay5 fadeInUp">As a Designer i am good at fit with few <span class="text-typed a-typed a-typed-skills" data-text="skills."></span></h2>
+                                            <span class="sub-title mb-45">ทักษะพิเศษ</span>
+                                            <h2 class="slide-title animate-element delay5 fadeInUp">เพิ่มความรู็ มีสมาธิ มีสติปัญญา<span class="text-typed a-typed a-typed-skills" data-text="ผ่อนคลาย"></span></h2>
                                         </div>
-                                        <p class="animate-element delay6 fadeInUp">All desigener have good skills to make sure satisfied their clints, As a designer I am also specialised few <b>skills.</b></p>
+                                        <p class="animate-element delay6 fadeInUp">ความสามาร๔พิเศษเป็นเครื่องมือยืนยันถึงประสบการณ์</p><b>ของตน.</b></p>
                                         <div class="bar-list a-progressbar pt-5 animate-element delay9 fadeInUp">
                                             <div class="bar-item">
                                                 <div class="row">
-                                                    <div class="col bar-item-title">App Design</div>
+                                                    <div class="col bar-item-title">ศิลปะ</div>
                                                     <div class="col-auto text-right bar-item-value">78%</div>
                                                 </div>
                                                 <div class="progress">
@@ -196,7 +198,7 @@
                                             </div>
                                             <div class="bar-item">
                                                 <div class="row">
-                                                    <div class="col bar-item-title">Web Design</div>
+                                                    <div class="col bar-item-title">ภาษาไทย</div>
                                                     <div class="col-auto text-right bar-item-value">95%</div>
                                                 </div>
                                                 <div class="progress">
@@ -205,7 +207,7 @@
                                             </div>
                                             <div class="bar-item">
                                                 <div class="row">
-                                                    <div class="col bar-item-title">Art & illustration</div>
+                                                    <div class="col bar-item-title">การงาน</div>
                                                     <div class="col-auto text-right bar-item-value">65%</div>
                                                 </div>
                                                 <div class="progress">
@@ -214,7 +216,7 @@
                                             </div>
                                             <div class="bar-item">
                                                 <div class="row">
-                                                    <div class="col bar-item-title">Banding</div>
+                                                    <div class="col bar-item-title">วิทย์</div>
                                                     <div class="col-auto text-right bar-item-value">85%</div>
                                                 </div>
                                                 <div class="progress">
